# netbox-rack-design

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TESTING.md  index.html  mkdocs.yml  pyproject.toml  requirements_dev.txt  sitemap.xml
.claude/skills/: release.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: ci.yaml  publish-pypi.yaml
assets/: ICON_LICENSE.txt
changelog/: index.html
contributing/: index.html
device-naming/: index.html
docs/: device-naming.md  editor-behavior-spec.md  editor-conformance-matrix.md  editor-known-issues.md  pdu-distribution-spec.md  power-distribution.md  power-projection-spec.md
editor-behavior-spec/: index.html
netbox_rack_design/: __init__.py  choices.py  distribution.py  distribution_advanced_example.py  distribution_example.py  filtersets.py  forms.py  graphql.py  models.py  naming.py  naming_example.py  navigation.py  projection.py  search.py  tables.py  template_content.py  urls.py  views.py
netbox_rack_design/api/: __init__.py  serializers.py  urls.py  views.py
netbox_rack_design/graphql/: __init__.py  filters.py  schema.py  types.py
netbox_rack_design/migrations/: 0001_initial.py  0002_designplacement_device_role_designplacement_tenant.py  0003_favoritedevicetype.py  0004_design_racks.py  0005_seed_design_racks.py  0006_hiddendesignrack.py  0007_designplacement_power_config_and_more.py  __init__.py
netbox_rack_design/templatetags/: rack_design.py
netbox_rack_design/testing/: __init__.py  utils.py
netbox_rack_design/tests/: __init__.py  test_api.py  test_distribution.py  test_distribution_advanced_example.py  test_distribution_example.py  test_filtersets.py  test_fulldepth.py  test_graphql.py  test_models.py  test_naming.py  test_naming_example.py  test_power_projection.py  test_projection.py  test_views.py  utils.py
pdu-distribution-spec/: index.html
power-distribution/: index.html
power-projection-spec/: index.html
search/: search_index.json
testing/: configuration.py
tests/: __init__.py
(+25 files in other folders)
