# See PEP 518 for the spec of this file
# https://www.python.org/dev/peps/pep-0518/

[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name =  "netbox-rack-design"
version = "0.9.0"
authors = [
    {name = "Petr Voronov", email = "ravenrs@gmail.com"},
]
description = "NetBox plugin for Rack Design."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["netbox", "netbox-plugin"]

classifiers=[
    'Development Status :: 3 - Alpha',
    'Framework :: Django',
    'Framework :: Django :: 5.1',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'Intended Audience :: Telecommunications Industry',
    'Natural Language :: English',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: System :: Networking',
]

requires-python = ">=3.12.0"

[project.optional-dependencies]
test = [
    "check-manifest==0.51",
    "ruff==0.14.14",
    "pre-commit==4.6.0",
    "pytest==9.0.2",
]

[project.urls]
Documentation = "https://github.com/ravenrs/netbox-rack-design/blob/main/README.md"
Source = "https://github.com/ravenrs/netbox-rack-design"
Tracker = "https://github.com/ravenrs/netbox-rack-design/issues"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by ruff-format
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.setuptools.packages.find]
where = ["."]
include = ["netbox_rack_design*"]

[tool.setuptools.package-data]
netbox_rack_design = [
    "templates/**",
    "static/**",
    "locale/**/*.mo",
]
